[project]
name = "ta-lib-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server providing tools to access to TA-Lib technical analysis indicators."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Han Mei" }]
keywords = ["stdio", "mcp", "llm"]
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.10.1",
    "ta-lib>=0.6.4",
]

[project.scripts]
ta-lib-mcp-server = "ta_lib_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
